--- a/views/views.xml
+++ b/views/views.xml
@@ -1,59 +1,26 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="export_and_shipping.list">
-      <field name="name">ExportAndShipping list</field>
-      <field name="model">export_and_shipping.export_and_shipping</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
+    <record model="ir.actions.act_window" id="shipment_list_action">
+        <field name="name">Shipments</field>
+        <field name="res_model">export_and_shipping.shipment</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
     </record>
-    -->
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="export_and_shipping.action_window">
-      <field name="name">ExportAndShipping window</field>
-      <field name="res_model">export_and_shipping.export_and_shipping</field>
-      <field name="view_mode">tree,form</field>
+    <menuitem id="shipments_menu" name="Shipments" parent="sales_team.menu_sales"
+          action="shipment_list_action"/>
+
+    <!-- Shipments tree/list view -->
+    <record model="ir.ui.view" id="shipments_tree_view">
+        <field name="name">shipments.tree</field>
+        <field name="model">export_and_shipping.shipment</field>
+        <field name="arch" type="xml">
+            <tree string="Shipments Tree">
+                <field name="awb"/>
+                <field name="date"/>
+                <field name="by_plane"/>
+            </tree>
+        </field>
     </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="export_and_shipping.action_server">
-      <field name="name">ExportAndShipping server</field>
-      <field name="model_id" ref="model_export_and_shipping_export_and_shipping"/>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="ExportAndShipping" id="export_and_shipping.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="export_and_shipping.menu_1" parent="export_and_shipping.menu_root"/>
-    <menuitem name="Menu 2" id="export_and_shipping.menu_2" parent="export_and_shipping.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="export_and_shipping.menu_1_list" parent="export_and_shipping.menu_1"
-              action="export_and_shipping.action_window"/>
-    <menuitem name="Server to list" id="export_and_shipping" parent="export_and_shipping.menu_2"
-              action="export_and_shipping.action_server"/>
-    -->
   </data>
 </odoo>
