--- a/views/views.xml
+++ b/views/views.xml
@@ -1,5 +1,39 @@
 <odoo>
   <data>
+    <record model="ir.ui.view" id="shipment_form_view">
+        <field name="name">shipment.form</field>
+        <field name="model">export_and_shipping.shipment</field>
+        <field name="arch" type="xml">
+            <form string="Course Form">
+                <sheet>
+                    <group string="General">
+                        <field name="perishable"/>
+                        <field name="approx_weight"/>
+                        <field name="customer"/>
+                    </group>
+                    <group string="Schedule">
+                        <field name="retrieval_date"/>
+                        <field name="departure_date"/>
+                        <field name="arrival_date"/>
+                    </group>
+                    <group string="Trip">
+                        <field name="by_plane"/>
+                        <field name="forwarder"/>
+                        <field name="transport"/>
+                        <field name="awb"/>
+                        <field name="flight_no"/>
+                    </group>
+                    <notebook>
+                        <page string="Notes">
+                            <field name="notes"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+
     <record model="ir.actions.act_window" id="shipment_list_action">
         <field name="name">Shipments</field>
         <field name="res_model">export_and_shipping.shipment</field>
