--- a/views/views.xml
+++ b/views/views.xml
@@ -46,6 +46,7 @@
                     <field name="is_organic"/>
                     <field name="size"/>
                     <field name="quality"/>
+                    <field name="is_export_order" invisible="1"/>
                 </xpath>
             </data>
         </field>
