Show inherited view from sales.order only after clicking on our own menuitem

--- a/views/views.xml
+++ b/views/views.xml
@@ -34,8 +34,8 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="order_form_view">
-        <field name="name">order.form</field>
+    <record model="ir.ui.view" id="exportorder_form_view">
+        <field name="name">exportorder.form</field>
         <field name="model">sale.order</field>
         <!-- Low priority and primary inheritance not to override the default view for standard actions -->
         <field name="priority">32</field>
@@ -43,9 +43,6 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <data>
-                <xpath expr="//field[@name='amount_total']" position="after">
-                    <field name="to_export"/>
-                </xpath>
                 <xpath expr="//field[@name='order_line']/tree//field[@name='product_uom_qty']" position="before">
                     <field name="is_organic"/>
                     <field name="size"/>
@@ -56,15 +53,15 @@
     </record>
 
       <!-- Window actions -->
-    <record model="ir.actions.act_window" id="shipments_actions">
-        <field name="name">Shipments</field>
+    <record model="ir.actions.act_window" id="shipment_actions">
+        <field name="name">shipment.actions</field>
         <field name="res_model">export_and_shipping.shipment</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <record model="ir.actions.act_window" id="orders_actions">
-        <field name="name">ExportOrders</field>
+    <record model="ir.actions.act_window" id="exportorder_actions">
+        <field name="name">exportorder.actions</field>
         <field name="res_model">sale.order</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
@@ -72,14 +69,14 @@
 
     <!--Menu Items-->
     <menuitem id="export_and_shipping_menu" name="Export and Shipping" parent="sales_team.menu_base_partner"/>
-    <menuitem id="shipments_menu_shipments" name="Shipments" parent="export_and_shipping_menu"
-          action="shipments_actions"/>
-    <menuitem id="shipments_menu_orders" name="Export Orders" parent="export_and_shipping_menu"
-          action="orders_actions"/>
+    <menuitem id="shipment_menu_shipments" name="Shipments" parent="export_and_shipping_menu"
+          action="shipment_actions"/>
+    <menuitem id="shipment_menu_order" name="Export Orders" parent="export_and_shipping_menu"
+          action="exportorder_actions"/>
 
     <!-- Tree/List views -->
-    <record model="ir.ui.view" id="shipments_tree_view">
-        <field name="name">shipments.tree</field>
+    <record model="ir.ui.view" id="shipment_tree_view">
+        <field name="name">shipment.tree</field>
         <field name="model">export_and_shipping.shipment</field>
         <field name="arch" type="xml">
             <tree string="Shipments Tree">
@@ -91,8 +88,8 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="order_tree_view">
-        <field name="name">order.tree</field>
+    <record model="ir.ui.view" id="exportorder_tree_view">
+        <field name="name">exportorder.tree</field>
         <field name="model">sale.order</field>
         <field name="arch" type="xml">
             <tree string="Export Orders Tree">
