--- a/views/views.xml
+++ b/views/views.xml
@@ -88,6 +88,7 @@
         <field name="res_model">sale.order</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
+        <field name="context" eval="{'search_default_only_export_orders': 1}"/>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Create a Export Order. Group several orders in the same shipment.
@@ -118,13 +119,15 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="exportorder_tree_view">
-        <field name="name">exportorder.tree</field>
+    <!-- Search views -->
+    <record model="ir.ui.view" id="exportorder_search_view">
+        <field name="name">exportorder.search</field>
         <field name="model">sale.order</field>
         <field name="arch" type="xml">
-            <tree string="Export Orders Tree">
-                <field name="to_export"/>
-            </tree>
+            <search>
+                <filter name="only_export_orders" string="Export Orders"
+                        domain="[('to_export', '=', True)]"/>
+            </search>
         </field>
     </record>
   </data>
