--- a/views/views.xml
+++ b/views/views.xml
@@ -1,5 +1,42 @@
 <odoo>
   <data>
+    <!-- Attachment Actions -->
+    <record model="ir.actions.act_window" id="attach_cert_action" >
+        <field name="name">Pyhtosanitary Certificate</field>
+        <field name="res_model">ir.attachment</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="domain" eval="[('is_certificate','=',True)]" />
+        <field name="context" eval="{'create_is_certificate': 1}"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">To add a pythosanitary certificate click on create</p>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="attach_extbill_action" >
+        <field name="name">External Bills</field>
+        <field name="res_model">ir.attachment</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="domain" eval="[('is_external_bill','=',True)]" />
+        <field name="context" eval="{'create_is_external_bill': 1}"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">To add a external bill click on create</p>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="attach_evidence_action" >
+        <field name="name">Pictures and Evidences</field>
+        <field name="res_model">ir.attachment</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="domain" eval="[('is_evidence','=',True)]" />
+        <field name="context" eval="{'create_is_evidence': 1}"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">To add Pictures and Evidences click on create</p>
+        </field>
+    </record>
+
     <!-- Form views -->
     <record model="ir.ui.view" id="shipment_form_view">
         <field name="name">shipment.form</field>
@@ -15,6 +52,16 @@
                         <field name="by_plane"/>
                         <field name="transport"/>
                         <field name="flight_no"/>
+                    </group>
+                    <group string="Documents">
+                        <label string="Pythosanitary Certificate" nolabel="1" />
+                        <button class="oe_button oe_form_button" name="%(attach_cert_action)d" string="Attach" type="action" />
+                        <newline/>
+                        <label string="External Bill" nolabel="1" />
+                        <button class="oe_button oe_form_button" name="%(attach_extbill_action)d" string="Attach" type="action" />
+                        <newline/>
+                        <label string="Pictures and Evidences" nolabel="1" />
+                        <button class="oe_button oe_form_button" name="%(attach_evidence_action)d" string="Attach" type="action" />
                     </group>
                     <notebook>
                         <page string="Export Orders">
@@ -65,7 +112,7 @@
         </field>
     </record>
 
-      <!-- Window actions -->
+      <!-- Window Actions -->
     <record model="ir.actions.act_window" id="shipment_actions">
         <field name="name">Shipments</field>
         <field name="res_model">export_and_shipping.shipment</field>
